--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -53,7 +53,7 @@
 
 .gallery__img:first-child {
   @include mq("md"){
-      // aspect-ratio: 746 / 492;
+      aspect-ratio: 746 / 492;
       grid-column: span 5;
       grid-row: span 2;
   }
@@ -108,11 +108,11 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  // padding: 40px 20px;
   transition: opacity 0.3s, visibility 0.3s;
   opacity: 0;
-  background: rgba(0, 0, 0, 50%);
+  background: rgba(0, 0, 0, 0.5); /* 50%の透明度で背景を暗く */
 }
+
 
 .gallery__modal.is-open {
   visibility: visible;
@@ -146,7 +146,6 @@
   left: 0;
 }
 
-/* no-scroll クラスを修正 */
 .no-scroll {
   overflow: hidden;
   position: fixed; /* 追加: ハンバーガーメニューと同時にスクロール固定を行う */
